# fullstack-journey

./: 1211_HTML.md  1212.md  25-12-11.md  HTML_TAG_LIST.md  HTML_기초.md  PC에 파일 옮기는 법.md  README.md  index.html  main.py  page.html  vscode공유방법.md
.github/ISSUE_TEMPLATE/: bug-report-template.yml  feature-report-template.yml  task.yml  trouble-shooting-template.yml  update-report-template.yml
0212test/: README.md  compose.yml
0212test/app1/: main.py  pyproject.toml  settings.py
0212test/app2/: main.py  pyproject.toml  settings.py
0212test/app3/: vite.config.js
1211/: 1211_HTML.md
1218.movie.boot/: main.html  movie.html
1218.movie.boot/css/: main.css  movie.css
GitHub_setting/: AI_GUIDE.md  API명세서_prompt.md  TS_TEMPLATE.md  사용법 및 권장폴더구조.md
GitHub_setting/app/: README.md  main.py  pyproject.toml  settings.py
practice_file/0126/: main.py  pyproject.toml
practice_file/0209/: compose.yml
practice_file/0209/app1/: dockerfile  logger.py  main.py  pyproject.toml  settings.py
practice_file/0210/: README.md
practice_file/0210_3/: compose.yml
practice_file/0211/: compose.yml
practice_file/0219/: compose.yml  dockerfile
practice_file/0223/: authorized_keys  aws_key.pem
practice_file/0224/: app-dp.yaml  app-sv.yaml  n2-ns.yaml
practice_file/0225/: compose.yml
practice_file/0225/app2/: Dockerfile  main.py  pyproject.toml  settings.py
practice_file/0226/: app1-config.yaml  app1-deployment.yaml  app1-sv.yaml  app2-config.yaml  app2-deployment.yaml  app2-sv.yaml  mariadb-config.yaml  mariadb-my-config.yaml  mariadb-pod.yaml  mariadb-pv.yaml  mariadb-pvc.yaml  nginx-pod.yaml  pvc-pv.yaml  redis-pod.yaml  redis-sv.yaml  vol-pod.yaml  vol-pv.yaml  vol-pvc.yaml
practice_file/0227_2/: compose.yml
practice_file/0303/: app2.py  app3-1.py  app3.py  index.html  main.py  news.py  pyproject.toml
practice_file/0304/: db.py  main.py  pyproject.toml
practice_file/0304/pages/: page1.py  page2.py  page3.py  page4.py  page5.py  page6.py
practice_file/0305/: main.py  pyproject.toml
practice_file/0306/back/: main.py  pyproject.toml  settings.py
practice_file/0306/back/pages/: interpark_statistic.py
practice_file/0309/: main.py  pyproject.toml
practice_file/0310/: app.py  compose.yml  ddl.sql  (+2 more)
practice_file/0330/app/: app1.py  app2.py  main.py  pyproject.toml  settings.py
practice_file/0330/app/output/: 1_원본데이터.json  지식그래프_최종.json
practice_file/0406/app/: main.py  pyproject.toml  settings.py
practice_file/0406/app/datasets/: pair.jsonl
practice_file/0406/app/src/: step01.py  step02.py  step03.py  step04.py  step05.py
practice_file/0408/app/: README.md  main.py  pyproject.toml  settings.py
practice_file/0408/app/src/: step01.py  step02.py  step03.py  step04.py  step05.py  step06.py  step07.py  step08.py  step09.py  step10.py
practice_file/0427_mariadb/: db.py  main.py  pyproject.toml  settings.py
practice_file/0427_mariadb/save_file/: 중대성평가.csv  지가보.csv
study/: 0106_Router이해하기.md  03프로젝트_개요 및 설계해설.md  1211_HTML.md  1212.md  1214.md  1216_iframe.md  1216_프로젝트 합치기.md  1217_css_bootstrap.md  1217_css_folder.md  1217_헷갈리는 코드속성들.md  1218.md  1219_javascript.md  1222_FOR문_JS.md  1222_IF문.JS.md  1222_JS.md  1223_Flowgorithm.md  1224.JS.Document.md  1224.jQuery.md  1226.Node.js.md  1228.md  1229_JSX문법.md  1230_깃허브-vsCode에 연결하기.md  1231_React_Router문법.md  Form_1214.md  파일공유.md
연습파일/: Form_1215.md  test.02.md  test01.html  test01.md  test03_1214.md  test04_1214.md
(+999 files in other folders)
