[project]
name = "0304"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "mariadb>=1.1.14",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "trafilatura>=2.0.0",
    "vega-datasets>=0.9.0",
]
