[project]
name = "0427-mariadb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.2",
    "mariadb>=1.1.14",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.3",
    "sqlalchemy>=2.0.49",
]
