[project]
name = "app2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.8",
    "fastapi[standard]>=0.132.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.0",
    "starlette>=0.52.1",
]
