[project]
name = "study43"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.1",
    "lxml>=6.0.2",
    "mariadb>=1.1.14",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
]
[tool.uv.extra-build-dependencies]
bcolz = ["setuptools"]