[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "neo4j-graphrag>=1.14.1",
    "ollama>=0.6.1",
    "ollama-llm>=0.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "streamlit>=1.55.0",
]
